--- a/_config.yml
+++ b/_config.yml
@@ -12,10 +12,11 @@ author: Seung-eun Lee
 # [조건부수정] 네비게이션 바에 포함되는 항목 (명칭 수정, 추가, 삭제 가능)
 # 예를 들어 ETRI 라는 항목을 네비게이션 바에 추가하고 싶은 경우, etri.md 파일 생성 후 ETRI: "etri" 라고 지정.
 navbar-links:
-  Career: "CV"
+  #Career: "career"
   Publication: "publication"
-  Blog: "blog"
+  Paper_Review: "blog"
   Project: "project"
+  Blog : "naver_blog"
   GitHub: "https://github.com/tmddms4test"
   #Google Scholar: "https://scholar.google.com/citations?user=seokhoson"
 
