--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ navbar-links:
   Publication: "publication"
   Paper_Review: "blog"
   Project: "project"
-  Blog : "naver_blog"
+  Blog : "https://blog.naver.com/sei1228"
   GitHub: "https://github.com/tmddms4test"
   #Google Scholar: "https://scholar.google.com/citations?user=seokhoson"
 
